--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,3 +1,4 @@
-<h1>Public::Homes#top</h1>
-<p>Find me in app/views/public/homes/top.html.erb</p>
-<p>鈴木良治参上</p>
+ようこそ、NaganoCakeへ！
+このサイトは、ケーキ販売のECサイトになります。
+会員でない方も商品の閲覧はできますが、
+購入には会員登録が必要になります。
