--- a/app/views/public/items/_genre.html.erb
+++ b/app/views/public/items/_genre.html.erb
@@ -1,13 +1,13 @@
-<table>
-  <thead>
-    <tr>
-      <th>ジャンル検索</th> 
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>ケーキ</td>
-      <td>焼き菓子</td>
-    </tr>
-  </tbody>
-</table>
+<!--<table>-->
+<!--  <thead>-->
+<!--    <tr>-->
+<!--      <th>ジャンル検索</th> -->
+<!--    </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--    <tr>-->
+<!--      <td>ケーキ</td>-->
+<!--      <td>焼き菓子</td>-->
+<!--    </tr>-->
+<!--  </tbody>-->
+<!--</table>-->
