--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,28 +1,28 @@
-<body>
-  <div class="container">
-    <div class="row">
-      <% @items.each do |item| %>
-        <div class="col-lg-3">
-          <%= render 'items/genre', item: item %>
-        </div>
-        <div class="col-lg-9">
-          <div class="item-head"><b>商品一覧</b></div>
-            <div class="item-count">（全#{item.count}件）</div>
-              <div class="card-image">
-                <figure class="image">
-                  <%= link_to item_path(item) do %>
-                    <%= attachment_image_tag item, :image %>
-                  <% end %>
-                </figure>
-              </div>
-              <div class="card-name">
-                <div class="item-name"><%= link_to item.name, item_path(item) %></div>
-              </div>
-              <div class="card-price">
-                <div class="item-price"><%= item.price %></div>
-              </div>
-        </div>
-      <% end %>
-    </div>
-  </div>
-</body>
+<!--<body>-->
+<!--  <div class="container">-->
+<!--    <div class="row">-->
+<!--      <%# @items.each do |item| %>-->
+<!--        <div class="col-lg-3">-->
+<!--          <%#= render 'items/genre', item: item %>-->
+<!--        </div>-->
+<!--        <div class="col-lg-9">-->
+<!--          <div class="item-head"><b>商品一覧</b></div>-->
+<!--            <div class="item-count">（全#{item.count}件）</div>-->
+<!--              <div class="card-image">-->
+<!--                <figure class="image">-->
+<!--                  <%#= link_to item_path(item) do %>-->
+<!--                    <%#= attachment_image_tag item, :image %>-->
+<!--                  <%# end %>-->
+<!--                </figure>-->
+<!--              </div>-->
+<!--              <div class="card-name">-->
+<!--                <div class="item-name"><%#= link_to item.name, item_path(item) %></div>-->
+<!--              </div>-->
+<!--              <div class="card-price">-->
+<!--                <div class="item-price"><%#= item.price %></div>-->
+<!--              </div>-->
+<!--        </div>-->
+<!--      <%# end %>-->
+<!--    </div>-->
+<!--  </div>-->
+<!--</body>-->
