--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,2 +1,23 @@
-<h1>Public::CartItems#index</h1>
-<p>Find me in app/views/public/cart_items/index.html.erb</p>
+<h1>ショッピングカート</h1>
+<%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, data: {confirm: "カート内商品を全て削除しますか？"}, class: "btn-sm btn-danger" %>
+<table>
+  <thead>
+    <tr>
+      <th>商品名</th>
+      <th>単価（税込）</th>
+      <th>数量</th>
+      <th>小計</th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <% @cart_items.each do |cart_item| %>
+    <tr>
+      <td><%= attachment_image_tag cart_item, :image %><%= cart_item.name %></td>
+      <td><%= cart_item.price %></td>
+      <td><%= link_to "変更", cart_item_path(cart_item), method: :</td>
+      <td><%= cart_item.amount %></td>
+      <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
+    </tr>
+  </tbody>
+</table>
