--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,4 +1,36 @@
-ようこそ、NaganoCakeへ！
-このサイトは、ケーキ販売のECサイトになります。
-会員でない方も商品の閲覧はできますが、
-購入には会員登録が必要になります。
+<body>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-3">
+        <%= render 'items/genre', item: item %>
+      </div>
+      <div class="col-lg-9">
+        <p>
+          ようこそ、NaganoCakeへ！<br>
+          このサイトは、ケーキ販売のECサイトになります。<br>
+          会員でない方も商品の閲覧はできますが、<br>
+          購入には会員登録が必要になります。
+        </p>
+        <div class="item-head"><b>オススメ商品</b></div>
+          <% @random.each do |item| %>
+            <div class="card-image">
+              <figure class="image">
+                <%= link_to item_path(item) do %>
+                  <%= attachment_image_tag item, :image %>
+                <% end %>
+              </figure>
+            </div>
+            <div class="card-name">
+              <div class="item-name"><%= link_to item.name, item_path(item) %></div>
+            </div>
+            <div class="card-price">
+              <div class="item-price"><%= item.price %></div>
+            </div>
+          <% end %>
+          <%= link_to 'もっと見る', item_path(item) %>
+      </div>
+    </div>
+  </div>
+</body>
+
+
