--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,2 +1,13 @@
 <h1>Admin::Genres#edit</h1>
 <p>Find me in app/views/admin/genres/edit.html.erb</p>
+
+<!--<h1>ジャンル編集</h1>-->
+<!--<%#= form_with model:@genre, local:true do |f| %>-->
+<!--  <%#= f.label :name, 'ジャンル' %>-->
+<!--  <%#= f.text_field :name %>-->
+<!--  <%#= f.radio_button :is_active, :true %>-->
+<!--  <%#= f.label :is_active, '有効', {value: :true, style: 'display: inline-block;'} %>-->
+<!--  <%#= f.radio_button :is_active, :false %>-->
+<!--  <%#= f.label :is_active, '無効', {value: :false, style: 'display: inline-block;'} %>-->
+<!--  <%#= submit '変更を保存する', class:'btn btn-primary' %>-->
+<!--<%# end %>-->
