--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,2 +1,29 @@
-<h1>Admin::Items#index</h1>
-<p>Find me in app/views/admin/items/index.html.erb</p>
+<h1>商品一覧</h1>
+<!--検索機能をつける-->
+<!--<%#= link_to new_admin_item_path do %>-->
+<!--  <i class="fal fa-plus-circle"></i>新規登録画面へ-->
+<!--<%# end %>-->
+<!--font awsome設定をすること-->
+<!--<table class="table">-->
+<!--  <thead class="thead-light">-->
+<!--    <tr>-->
+<!--      <th>商品ID</th>-->
+<!--      <th>商品名</th>-->
+<!--      <th>税抜価格</th>-->
+<!--      <th>ジャンル</th>-->
+<!--      <th>ステータス</th>-->
+<!--    </tr>-->
+<!--  </thead>-->
+<!--  <tbody>-->
+<!--    <tr>-->
+<!--      <%# @items.each do |item| %>-->
+<!--        <td><%#= item.id %></td>-->
+<!--        <td><%#= item.name %></td>-->
+<!--        <td><%#= item.price.to_s(:delimited %></td>-->
+<!--        <td><%#= item.genre.name %></td>-->
+<!--        <td><%#= item.is_active? '販売中':'販売停止中' %></td>-->
+<!--      <%# end %>-->
+<!--    </tr>-->
+<!--    ※商品IDとページへkaminari導入確認。-->
+<!--  </tbody>-->
+<!--</table>-->
