--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,2 +1,43 @@
-<h1>Admin::Items#new</h1>
-<p>Find me in app/views/admin/items/new.html.erb</p>
+<h1>商品新規登録</h1>
+<!--<div class="container">-->
+<!--  <div class="row">-->
+<!--    <%#= form_with model:@item, local:true do |f| %>-->
+<!--    <div class="col-xs-6">-->
+<!--      <div class="form-group">-->
+<!--        <%#= f.label :image, '商品画像' %>-->
+<!--        <%#= f.attachment_field :image %>-->
+        <!--プレビュー機能の実装をするか検討-->
+<!--      </div>-->
+<!--    </div>-->
+<!--    <div class="col-xs-6">-->
+<!--      <div class="form-group">-->
+<!--        <%#= f.label :name, '商品名' %>-->
+<!--        <%#= f.text_field :name %>-->
+<!--      </div>-->
+<!--      <div class="form-group">-->
+<!--        <%#= f.label :introduction, '商品説明' %>-->
+<!--        <%#= f.text_field :introduction %>-->
+<!--      </div>-->
+<!--      <div class="form-group">-->
+<!--        <%#= f.label :genre_id, 'ジャンル' %>-->
+<!--        <%#= f.select :genre, Genre.all.map{|g| [g.name]} %>-->
+        <!--※有効の場合のみ指定をするのか要検討-->
+<!--      </div>-->
+<!--      <div class="form-group">-->
+<!--        <%#= f.label :price, '税抜価格' %>-->
+<!--        <%#= f.text_field :price %>-->
+<!--      </div>-->
+<!--      <div class="form-group">-->
+<!--        <%#= f.label :price, '販売ステータス' %>-->
+<!--        <%#= f.select :is_active, [['販売中', true], ['売切れ', false]] %>-->
+<!--      </div>-->
+<!--      <p><%#= f.submit '新規登録' %></p>-->
+<!--    </div>-->
+<!--    <%# end %>-->
+<!--  </div>-->
+<!--</div>-->
+
+  
+  
+  
+
