--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -20,4 +20,7 @@
       <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
     </tr>
   </tbody>
+  <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+  <div class="total-amount">合計金額</div>
+  <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
 </table>
