--- a/app/views/admin/end_users/edit.html.erb
+++ b/app/views/admin/end_users/edit.html.erb
@@ -1,2 +1,40 @@
-<h1>Admin::EndUsers#edit</h1>
-<p>Find me in app/views/admin/end_users/edit.html.erb</p>
+<h2><%= @end_user.last_name %><%= @end_user.first_name %>さんの会員情報編集</h2>
+
+<%= form_with model:@end_user, local: true do |f| %>
+  <tr>
+      <td><%= f.label :"顧客ID" %></td>
+      <td><%= f.id %></td>
+  </tr>
+  <tr>
+      <td><%= f.label :"氏名" %></td>
+      <td><%= f.text_field :last_name %><%= f.text_field :first_name %></td>
+  </tr>
+  <tr>
+      <td><%= f.label :"フリガナ" %></td>
+      <td><%= f.text_field :last_name_kana %><%= f.text_field :first_name_kana %></td>
+  </tr>
+  <tr>
+      <td><%= f.label :"郵便番号" %></td>
+      <td><%= f.number_field :postal_code %></td>
+  </tr>
+  <tr>
+      <td><%= f.label :"会員" %></td>
+      <td><%= f.text_field :address %></td>
+  </tr>
+  <tr>
+      <td><%= f.label :"電話番号" %></td>
+      <td><%= f.telephone_field :telphone_number %></td>
+  </tr>
+  <tr>
+      <td><%= f.label :"メールアドレス" %></td>
+      <td><%= f.email_field :email %></td>
+  </tr>
+
+  <tr>
+      <td><%= f.label :"会員ステータス" %></td>
+      <!--<td><%= f.check_box :is_deleted %></td> 調べたがワイヤーフレームのような表記が不明でサーバー立ち上げられないのでペンディング-->
+  </tr>
+
+  <%= f.submit "変更を保存する" %>
+
+<%= end %>
