--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-3">
-        <%= render 'items/genre', item: item %>
+        <%= render 'items/genre', item: @item, genres: @genres %>
       </div>
       <div class="col-lg-9">
         <p>
