--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -3,11 +3,11 @@
     <div class="row">
       <% @items.each do |item| %>
        <div class="col-lg-3">
-         <%= render "items/genre", item: item
+         <%= render "genre", item: item, genres: @genres %>
        </div>
         <div class="col-lg-9">
           <div class="item-head"><b>商品一覧</b></div>
-            <div class="item-count">（全#{item.count}件）</div>
+            <div class="item-count">（全<%= item.count %>件）</div>
               <div class="card-image">
                 <figure class="image">
                   <%= link_to item_path(item) do %>
