--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <%= render 'items/genre', item: @item, genre: @ %>
+      <%= render 'items/genre', item: @item, genres: @genres %>
     </div>
       <div class="col-lg-9">
         <div class="card-image">
