--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,2 +1,71 @@
-<h1>Admin::Orders#show</h1>
-<p>Find me in app/views/admin/orders/show.html.erb</p>
+<h1>注文履歴詳細</h1>
+
+<table>
+  <tbody>
+      <tr>
+        <td>購入者</td>
+        <td>
+          <%= link_to admin_end_user_path() do %>
+            "@order.customer.last_name""@order.customer.first_name"
+          <% end %>
+        </td>
+      <tr>
+      <tr>
+        <td>配送先</td>
+        <td>"@order.address"</td>
+      <tr>
+    　<tr>
+        <td>支払方法</td>
+        <td>"@order.payment_method"</td>
+      <tr>
+    　<tr>
+        <td>支払ステータス</td>
+        <td>
+          " form_with model:@order, local: true do |f| " 
+            <%= select :status,:name,Order.statuses.keys.to_a %>
+            " f.submit "更新" "
+          " end "
+        </td>
+      <tr>
+           
+  </tbody>
+</table>
+
+<table>
+  <thead>
+    <tr>
+      <td>商品名</td>
+      <td>単価(税込)</td>
+      <td>数量</td>
+      <td>小計</td>
+      <td>制作ステータス</td>
+    </tr>
+  </thead>
+  <% @orders.each do |order| %>
+  <tbody>
+    <tr>
+      <td><%= order.customer.last_name %><%= order.customer.first_name %></td>
+      <td><%= order.name %></td>
+      <td><%= order.order_detail.amount %></td></td>
+      <td><%= order.order_detail.making_status %></td>
+      <td><%= link_to "更新", admin_order_path(order) %></td>
+    </tr>
+  </tbody>
+  <% end %>
+</table>
+
+<table>
+  <tbody>
+    <tr>
+      <td>商品合計</td>
+      <td>"@order.order_detail.price*@order.order_detail.amount"</td>
+    </tr>
+    <tr>
+      <td>送料</td>
+      <td>"@order.postage"</td>
+    </tr><tr>
+      <td>請求金額合計</td>
+      <td>"@order.total_payment"</td>
+    </tr>
+  </tbody>
+</table>
