[Finish] top&items

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,14 @@
  */
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
+.item-lists {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.welcome {
+  text-align: center;
+  font-size: 25px;
+}
