--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -15,10 +15,11 @@
     <tr>
       <td><%= attachment_image_tag cart_item, :image %><%= cart_item.name %></td>
       <td><%= cart_item.price %></td>
-      <td><%= link_to "変更", cart_item_path(cart_item), method: :</td>
+      <td><%= link_to "変更", cart_item_path(cart_item), method: :post, class: "btn btn-primary" %></td>
       <td><%= cart_item.amount %></td>
       <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
     </tr>
+    <% end %>
   </tbody>
   <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
   <div class="total-amount">合計金額</div>
