--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -2,19 +2,27 @@
   <div class="container">
   <div class="row">
     <div class="col-lg-3">
-      <%= render 'items/genre', item: @item, genres: @genres %>
+      <%= render "genre", genres: @genres %>
     </div>
       <div class="col-lg-9">
-        <div class="card-image">
+        <div class="col-4">
           <figure class="image">
-            <div class="item-image"><%= attachment_image_tag @item, :image %></div>
+            <div class="item-image"><%= attachment_image_tag @item, :image, :size =>'350x250' %></div>
           </figure>
         </div>
-        <p></p>
-        <%= form_with model: @item, url: item_path(item), local: true, do |f| %>
-          <%= f.select :amount, options_for_select((1..30).to_a), include_blank: "個数選択" %>
-          <%= f.submit "カートに入れる", cart_items_path %>
-        <% end %>
+        <div class="col-4">
+          <h2><%= @item.name %></h2>
+          <div class="item-intro"><%= @item.introduction %></div>
+          <h3 class="item-price"><%= addTax(@item.price,1.1) %></h3>
+          <%= form_with model: @item, url: cart_items_path, method: :get, local: true do |f| %>
+            <%= f.select :amount, options_for_select((1..30).to_a), include_blank: "個数選択" %>
+            <%= f.button :type => "submit", class: "btn btn-primary" do %>
+              <i class="fas fa-shopping-cart"></i>
+            <% end %>
+            <%#= f.submit "カートに入れる"  %>
+            <%= link_to "戻る", items_path %>
+          <% end %>
+        </div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
