--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
-<h1>ショッピングカート</h1>
-<%#= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, data: {confirm: "カート内商品を全て削除しますか？"}, class: "btn-sm btn-danger" %>
-<table>
+<h2>ショッピングカート</h2>
+<%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, data: {confirm: "カート内商品を全て削除しますか？"}, class: "btn-sm btn-danger" %>
+<table border="1">
   <thead>
     <tr>
       <th>商品名</th>
@@ -11,17 +11,17 @@
     </tr>
   </thead>
   <tbody>
-    <%# @cart_items.each do |cart_item| %>
+    <% @cart_items.each do |cart_item| %>
     <tr>
-      <td><%#= attachment_image_tag cart_item, :image %><%#= cart_item.name %></td>
-      <td><%#= cart_item.price %></td>
-      <td><%#= link_to "変更", cart_item_path(cart_item), method: :post, class: "btn btn-primary" %></td>
-      <td><%#= cart_item.amount %></td>
-      <td><%#= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
+      <td><%= attachment_image_tag cart_item, :image, :size =>'150x150' %><%= cart_item.name %></td>
+      <td><%= cart_item.price %></td>
+      <td><%= link_to "変更", cart_item_path(cart_item), method: :post, class: "btn btn-primary" %></td>
+      <td><%= cart_item.amount %></td>
+      <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
     </tr>
-    <%# end %>
+    <% end %>
   </tbody>
-  <%#= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
-  <div class="total-amount">合計金額</div>
-  <%#= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
 </table>
+  <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
+  <div class="total-amount">合計金額</div>
+  <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
