--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -14,8 +14,9 @@
           <h2><%= @item.name %></h2>
           <div class="item-intro"><%= @item.introduction %></div>
           <h3 class="item-price"><%= addTax(@item.price,1.1) %></h3>
-          <%= form_with model: @item, url: cart_items_path, method: :get, local: true do |f| %>
+          <%= form_with model: @cart_item, url: cart_items_path, method: :post, local: true do |f| %>
             <%= f.select :amount, options_for_select((1..30).to_a), include_blank: "個数選択" %>
+            <%= f.hidden_field :item_id, :value => @item.id %>
             <%= f.button :type => "submit", class: "btn btn-primary" do %>
               <i class="fas fa-shopping-cart"></i>
             <% end %>
