--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -12,19 +12,19 @@
       <tr>
       <tr>
         <td>配送先</td>
-        <td>"@order.address"</td>
+        <td><%= @order.address %></td>
       <tr>
     　<tr>
         <td>支払方法</td>
-        <td>"@order.payment_method"</td>
+        <td><%= @order.payment_method %></td>
       <tr>
     　<tr>
         <td>支払ステータス</td>
         <td>
-          " form_with model:@order, local: true do |f| " 
-            <%= select :status,:name,Order.statuses.keys.to_a %>
-            " f.submit "更新" "
-          " end "
+          <%= form_with model:@order, url:admin_order_path(@order) ,local: true do |f| %>
+            <%= f.select :status, options_for_select(Order.statuses.keys) %>
+            <%= f.submit "更新" %>
+          <% end %>
         </td>
       <tr>
            
@@ -44,11 +44,16 @@
   <% @orders.each do |order| %>
   <tbody>
     <tr>
-      <td><%= order.customer.last_name %><%= order.customer.first_name %></td>
       <td><%= order.name %></td>
-      <td><%= order.order_detail.amount %></td></td>
-      <td><%= order.order_detail.making_status %></td>
-      <td><%= link_to "更新", admin_order_path(order) %></td>
+      <td>" order.order_details.price "</td></td>
+      <td>" order.order_details.amount "</td></td>
+      <td>" order.order_details.making_status "</td>
+      <td>
+        <%= form_with model:@order, url:admin_order_path(order) ,local: true do |f| %>
+          <%= select :making_status,:name,OrderDetail.making_statuses.keys.to_a %>
+          <%= f.submit "更新" %>
+        <% end %>
+      </td>
     </tr>
   </tbody>
   <% end %>
@@ -62,10 +67,10 @@
     </tr>
     <tr>
       <td>送料</td>
-      <td>"@order.postage"</td>
+      <td><%= @order.postage %></td>
     </tr><tr>
       <td>請求金額合計</td>
-      <td>"@order.total_payment"</td>
+      <td><%= @order.total_payment %></td>
     </tr>
   </tbody>
 </table>
