--- a/app/assets/stylesheets/admin/items.scss
+++ b/app/assets/stylesheets/admin/items.scss
@@ -1,3 +1,43 @@
 // Place all the styles related to the admin::items controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// 各商品画面の見出し
+.item {
+    margin-bottom: 80px;
+}
+
+// 商品一覧画面での新規投稿画面遷移用ボタン
+.new-botton {
+  color: gray;
+  float: right;
+}
+
+// 商品詳細・編集画面のボタン
+.item-edit {
+  margin-top: 380px;
+}
+
+// 商品新規投稿・編集画面のフォーム欄
+.item-label {
+  width: 100px;
+}
+
+.item-label-introduction {
+  width: 100px;
+  vertical-align: top;
+}
+
+.item-form {
+  width: 250px;
+  height: 40px;
+}
+
+.item-form-introduction {
+  width: 250px;
+}
+
+.field_with_errors {
+  width: 100px;
+}
+
