--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Admin::Items#edit</h1>
-<p>Find me in app/views/admin/items/edit.html.erb</p>
+<div class="container">
+  <h1 class="item">商品編集</h1>
+  <%= render "error", item: @item %>
+
+    <div class="row">
+      <%= form_with model:@item, url:admin_item_path(@item), local:true do |f| %>
+      <%= render "form", f: f, edit_flag: true %>
+      <% end %>
+    </div>
+</div>
+
