--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -1,31 +1,35 @@
-<h1>商品一覧</h1>
-<!--検索機能をつける-->
-<%= link_to new_admin_item_path do %>
-  <i class="fas fa-plus-circle"></i>
-<% end %>
-<!--font awsome設定をすること-->
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th>商品ID</th>
-      <th>商品名</th>
-      <th>税抜価格</th>
-      <th>ジャンル</th>
-      <th>ステータス</th>
-      <th>画像（確認用）</th>
-    </tr>
-  </thead>
-  <tbody>
-    <% @items.each do |item| %>
+<div class="container">
+  <h1 class="item">商品一覧</h1>
+
+  <%= link_to new_admin_item_path do %>
+    <i class="fas fa-plus-circle fa-3x new-botton"></i>
+  <% end %>
+
+  <table class="table">
+    <thead class="thead-light">
       <tr>
-        <td><%= item.id %></td>
-        <td><%= item.name %></td>
-        <td><%= item.price.to_s(:delimited) %></td>
-        <td><%= item.genre.name %></td>
-        <td><%= item.is_active == true ? '販売中':'販売停止中' %></td>
-        <td><%= attachment_image_tag item, :image, format: 'jpeg', size: "100x100" %></td>
+        <th>商品ID</th>
+        <th>商品名</th>
+        <th>税抜価格</th>
+        <th>ジャンル</th>
+        <th>ステータス</th>
       </tr>
-    <% end %>
-    <!--※商品IDとページへkaminari導入確認。-->
-  </tbody>
-</table>
+    </thead>
+    <tbody>
+      <% @items.each do |item| %>
+        <tr>
+          <td><%= item.id %></td>
+          <td>
+            <%= link_to edit_admin_item_path(item) do %>
+              <%= item.name %>
+            <% end %>
+          </td>
+          <td><%= item.price.to_s(:delimited) %></td>
+          <td><%= item.genre.name %></td>
+          <td><%= item.is_active == true ? "販売中":"販売停止中" %></td>
+        </tr>
+      <% end %>
+      <!--※商品IDとページへkaminari導入確認。-->
+    </tbody>
+  </table>
+</div>
