--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,2 +1,38 @@
-<h1>Admin::Items#show</h1>
-<p>Find me in app/views/admin/items/show.html.erb</p>
+<div class="container">
+  <h1 class="item">商品詳細</h1>
+  
+  <div class="row">
+    <div class="col-xs-3">
+      <%= attachment_image_tag @item, :image, format: "jpeg", size: "200x200" %>
+    </div>
+    
+    <div class="col-xs-5">
+      <table class="table">
+        <tr>
+          <td class="col-xs-3">商品名</td>
+          <th class="col-xs-9"><%= @item.name %></th>
+        </tr>
+        <tr>
+          <td>商品説明</td>
+          <th><%= @item.introduction %></th>
+        </tr>
+        <tr>
+          <td>ジャンル</td>
+          <th><%= @item.genre.name %></th>
+        </tr>
+        <tr>
+          <td>税込価格</br>（税抜価格）</td>
+          <th><%= @tax_price.to_s(:delimited) %>（<%= @item.price.to_s(:delimited) %>）円</th>
+        </tr>
+        <tr>
+          <td>販売ステータス</td>
+          <th><%= @item.is_active == true ? "販売中":"販売停止中" %></th>
+        </tr>
+      </table>
+    </div>
+    
+    <div class="col-xs-4 item-edit">
+      <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-primary" %>
+    </div>
+  </div>
+</div>
