--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,27 +1,35 @@
-<h2>ショッピングカート</h2>
-<%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, data: {confirm: "カート内商品を全て削除しますか？"}, class: "btn-sm btn-danger" %>
-<table border="1">
-  <thead>
+<body>
+  <h2>ショッピングカート</h2>
+  <div class="all-delete">
+    <%= link_to "カートを空にする", cart_items_destroy_all_path, method: :delete, data: {confirm: "カート内商品を全て削除しますか？"}, class: "btn-sm btn-danger" %>
+  </div>
+  <table border="1">
+    <thead>
+      <tr>
+        <th>商品名</th>
+        <th>単価（税込）</th>
+        <th>数量</th>
+        <th>小計</th>
+        <th></th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @cart_items.each do |cart_item| %>
+      <tr>
+        <td><%= attachment_image_tag cart_item, :image, :size =>'150x150' %><%= cart_item.name %></td>
+        <td><%= cart_item.price %></td>
+        <td><%= link_to "変更", cart_item_path(cart_item), method: :post, class: "btn btn-primary" %></td>
+        <td><%= cart_item.amount %></td>
+        <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+  <p><%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %></p>
+  <table>
     <tr>
-      <th>商品名</th>
-      <th>単価（税込）</th>
-      <th>数量</th>
-      <th>小計</th>
-      <th></th>
+      <td>合計金額</td><td></td>
     </tr>
-  </thead>
-  <tbody>
-    <% @cart_items.each do |cart_item| %>
-    <tr>
-      <td><%= attachment_image_tag cart_item, :image, :size =>'150x150' %><%= cart_item.name %></td>
-      <td><%= cart_item.price %></td>
-      <td><%= link_to "変更", cart_item_path(cart_item), method: :post, class: "btn btn-primary" %></td>
-      <td><%= cart_item.amount %></td>
-      <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-  <%= link_to "買い物を続ける", items_path, class: "btn btn-primary" %>
-  <div class="total-amount">合計金額</div>
-  <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %>
+  </table>
+  <p><%= link_to "情報入力に進む", new_order_path, class: "btn btn-success" %></p>
+</body>
