--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,2 +1,42 @@
-<h1>Public::Orders#confirm</h1>
-<p>Find me in app/views/public/orders/confirm.html.erb</p>
+<div class="container">
+  <div class="row">
+    <div class="col-lg-8">
+      <h2>注文情報確認</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>商品名</th>
+            <th>単価（税込）</th>
+            <th>数量</th>
+            <th>小計</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @orders.each do |order| %>
+          <tr>
+            <td><%= attachment_image_tag order, :image, :size =>'150x150' %><%= order.name %></td>
+            <td><%= order.price %></td>
+            <td><%= order.amount %></td>
+            <td><%= order.total_payment %></td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <h4>支払い方法</h4>
+      <div class="payment-method"><%= order.payment_method %></div>
+      <h4>お届け先</h4>
+      <div class="ordered_address"><%= order.address %></div>
+      <%= link_to "購入を確定する", orders_complete_path, class: "btn btn-success" %>
+    </div>
+
+    <div class="col-lg-4">
+      <table>
+        <tr>
+          <td>送料</td><td>800円</td>
+          <td>商品合計</td><td></td>
+          <td>請求金額</td><td></td>
+        </tr>
+      </table>
+    </div>
+  </div>
+</div>
