--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,2 +1,27 @@
-<h1>Public::Orders#index</h1>
-<p>Find me in app/views/public/orders/index.html.erb</p>
+<h2>注文履歴一覧</h2>
+  <table>
+    <thead>
+      <tr>
+        <th>注文日</th>
+        <th>配送先</th>
+        <th>注文商品</th>
+        <th>支払金額</th>
+        <th>ステータス</th>
+        <th>注文詳細</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% @orders.each do |order| %>
+      <tr>
+        <td>
+          <time><%= order.created_at.strftime("%Y-%m-%d %H:%M") %></time>
+        </td>
+        <td><%= order.address %></td>
+        <td><%= order.item %></td>
+        <td><%= order.total_payment %></td>
+        <td><%= order.status %></td>
+        <td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
