--- a/app/views/customers/registrations/new.html.erb
+++ b/app/views/customers/registrations/new.html.erb
@@ -1,29 +1,62 @@
-<h2>Sign up</h2>
+<div class="container">
+  <div class="row">
+    <h2>新規登録</h2>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= render "customers/shared/error_messages", resource: resource %>
+    <%= form_with model: @customer, url: end_users_path, id: 'new_customer', class: 'new_customer', local: true do |f| %>
+      <%= render "customers/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      <div class="form-group">
+        <label>名前   </label>
+          <%= f.label :last_name, "（姓）" %>
+            <%= f.text_field :last_name %>
+          <%= f.label :first_name, "（名）" %>
+            <%= f.text_field :first_name %>
+      </div>
+      <div class="form-group">
+        <label>フリガナ　　　</label>
+          <%= f.label :last_name_kana, "セイ" %>
+            <%= f.text_field :last_name_kana %>
+          <%= f.label :first_name_kana, "カナ" %>
+            <%= f.text_field :first_name_kana %>
+      </div>
+      <div class="field">
+        <%= f.label :email, "メールアドレス" %><br />
+          <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+      </div>
+      <div class="form-group">
+        <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
+          <%= f.text_field :postal_code %>
+      </div>
+      <div class="form-group">
+        <%= f.label :address, "住所" %>
+          <%= f.text_field :address %>
+      </div>
+      <div class="form-group">
+        <%= f.label :telphone_number, "電話番号（ハイフンなし）" %>
+          <%= f.text_field :telphone_number %>
+      </div>
+      <div class="field">
+        <%= f.label :password, "パスワード（６文字以上）" %>
+          <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+          <% end %><br />
+          <%= f.password_field :password, autocomplete: "new-password" %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation, "パスワード（確認用）" %><br />
+          <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+      </div>
+      <div class="actions">
+        <%= f.submit "新規登録", class: "btn" %>
+      </div>
+    <% end %>
   </div>
 
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="row">
+    <h2>既に登録済みの方</h2>
+    <p>
+      <%= link_to "こちら", end_users_sign_in_path %>　からログインしてください。
+    </p>
   </div>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "customers/shared/links" %>
+</div>
