--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -2,3 +2,7 @@
 このサイトは、ケーキ販売のECサイトになります。
 会員でない方も商品の閲覧はできますが、
 購入には会員登録が必要になります。
+
+<%= link_to "新規登録", end_users_sign_up_path %>
+
+<%= link_to "ログアウト", end_users_sign_out_path, method: :delete %>
