--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -26,3 +26,13 @@
   text-align: center;
   font-size: 25px;
 }
+
+// Bootstrapのnavbar-fixed-topを使用するときは、レイアウトでbody（本文）と重なるため、あわせてCSSも記述。
+body {
+  padding-top: 70px;
+}
+
+.welcome-message {
+  color: white;
+  padding: 15px 25px 0 0;
+}
