--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="item">商品詳細</h1>
+  <h1 class="item-header">商品詳細</h1>
 
   <div class="row">
     <div class="col-xs-4">
