--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="item">商品新規登録</h1>
+  <h1 class="item-header">商品新規登録</h1>
   <%= render "error", item: @item %>
 
     <div class="row">
