--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -2,39 +2,56 @@
   <div class="row">
     <div class="col-lg-8">
       <h2>注文情報確認</h2>
-      <table>
+      <table border="1">
         <thead>
           <tr>
             <th>商品名</th>
-            <th>単価（税込）</th>
+            <th>単価</th>
             <th>数量</th>
             <th>小計</th>
+            <th></th>
           </tr>
         </thead>
         <tbody>
-          <% @orders.each do |order| %>
+          <% @cart_items.each do |cart_item| %>
           <tr>
-            <td><%= attachment_image_tag order, :image, :size =>'150x150' %><%= order.name %></td>
-            <td><%= order.price %></td>
-            <td><%= order.amount %></td>
-            <td><%= order.total_payment %></td>
+            <td><%= attachment_image_tag cart_item.item, :image, :size =>'150x150' %><%= cart_item.item.name %></td>
+            <td class="item-price"><%= addTax(cart_item.item.price,1.1) %></td>
+            <td>
+              <%= form_with model: cart_item, url: cart_item_path(cart_item), method: :patch, local: true do |f| %>
+                <%= f.text_field :amount %><%= f.submit "変更", class: "btn btn-primary" %>
+              <% end %>
+            </td>
+            <td><%= addTax((cart_item.item.price * cart_item.amount),1.1) %></td>
+            <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
           </tr>
-          <% end %>
+          <!--カートの小計と個数と税率をかけたものを初期値0に足す-->
+          <% @sum += cart_item.item.price * cart_item.amount %>
+         <% end %>
         </tbody>
       </table>
       <h4>支払い方法</h4>
-      <div class="payment-method"><%= order.payment_method %></div>
+      <div class="payment-method"><%= @order.payment_method %></div>
+
+
       <h4>お届け先</h4>
-      <div class="ordered_address"><%= order.address %></div>
-      <%= link_to "購入を確定する", orders_complete_path, class: "btn btn-success" %>
+      <div class="ordered_address">〒<%= @order.postal_code %>  <%= @order.address %></div>
+      <p class"ordered_name"><%= @order.name %></p>
+      <%= form_with model: @order, url: orders_path, local: true do |f| %>
+        <%= f.submit "購入を確定する", class: "btn btn-success" %>
+      <% end %>
     </div>
 
     <div class="col-lg-4">
-      <table>
+      <table border="1">
         <tr>
-          <td>送料</td><td>800円</td>
-          <td>商品合計</td><td></td>
-          <td>請求金額</td><td></td>
+          <td>送料</td><td>¥<%= @postage %></td>
+        </tr>
+        <tr>
+          <td>商品合計</td><td>¥<%= (@sum * 1.1 ).round %>(税込)</td>
+        </tr>
+        <tr>
+          <td>請求金額</td><td>¥<%= (@sum * 1.1 ).round + @postage %></td>
         </tr>
       </table>
     </div>
