--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -4,43 +4,43 @@
       <h2>注文情報入力</h2>
       <%= form_with model: @order, url: orders_confirm_path, method: :post, local: true do |f| %>
         <h4><b>支払い方法</b></h4>
-          <%= f.radio_button :payment_method, :credit_card %>
-          <%= f.label :payment_method, "クレジットカード", {value: :credit_card, style: "display: inline-block;"} %>
-          <%= f.radio_button :payment_method, :bank %>
-          <%= f.label :payment_method, "銀行振込", {value: :bank, style: "display: inline-block;"} %>
+          <%= f.radio_button :payment_method, :クレジットカード, checked: "checked" %>
+          <%= f.label :クレジットカード, { style: "display: inline-block;"} %>
+          <%= f.radio_button :payment_method, :銀行振込 %>
+          <%= f.label :銀行振込, {style: "display: inline-block;"} %>
         <h4><b>お届け先</b></h4>
         <p>
-          <%= f.radio_button :address, :customer_address %>
-          <%= f.label :address, "ご自身の住所", { value: :customer_address } %>
-          <%= @customer.postal_code %>
-          <%= @customer.address %>
-          <%= @customer.first_name %><%= @customer.last_name %>
+          <%= f.radio_button :order, "0", checked: "checked" %>
+          <%= f.label :my_address, "ご自身の住所" %>
+          <%= @customer.postal_code %><%= @customer.address %>
+          <%= @customer.last_name %><%= @customer.first_name %>
         </p>
         <p>
-          <%= f.radio_button :address, :choose_address %>
-          <%= f.label :address, "登録済住所から選択", { value: :choose_address } %>
+          <%= f.radio_button :order, "1" %>
+          <%= f.label :登録済住所から選択 %>
         </p>
         <p>
-          <%= f.select :address, ['1', '2'], { include_blank: '下記からお選び下さい' } %>
+          <!--@address, :idを配列のところに入れる-->
+          <%= f.select :order, ['1', '2'], { include_blank: '下記からお選び下さい' } %>
         </p>
         <p>
-          <%= f.radio_button :address, :new_address %>
-          <%= f.label :address, "新しいお届け先", { value: :new_address } %>
+          <%= f.radio_button :order, "2" %>
+          <%= f.label :新しいお届け先 %>
         </p>
         <p>
           <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
-          <%= f.text_field :postal_code %>
+          <%= f.text_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
         </p>
         <p>
           <%= f.label :address, "住所" %>
-          <%= f.text_field :address %>
+          <%= f.text_field :address, autofocus: true, autocomplete: "address" %>
         </p>
         <p>
           <%= f.label :name, "宛名" %>
-          <%= f.text_field :name %>
+          <%= f.text_field :name, autofocus: true, autocomplete: "name" %>
         </p>
 
-      <%= f.submit "確認画面へ進む", class: "btn btn-primary" %>
+        <%= f.submit "確認画面へ進む", class: "btn btn-primary" %>
       <% end %>
 
     </div>
