--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -7,10 +7,10 @@
       <ul class="nav navbar-nav navbar-right">
         <% if customer_signed_in? %>
           <li class="welcome-message">ようこそ<%= current_customer.last_name %>さん！</li>
-          <li><%= link_to ' マイページ', end_user_path(current_customer) %></li>
+          <li><%= link_to ' マイページ', end_users_my_page_path(current_customer) %></li>
           <li><%= link_to ' 商品一覧', items_path %></li>
           <li><%= link_to ' カート', cart_items_path %></li>
-          <li><%= link_to ' ログアウト', end_users_sign_out_path, method: :delete %></li>
+          <li><%= link_to ' ログアウト', destroy_customer_session_path, method: :delete %></li>
         <% elsif admin_signed_in? %>
           <li><%= link_to ' 商品一覧', admin_items_path %></li>
           <li><%= link_to ' 会員一覧', admin_end_users_path %></li>
@@ -20,8 +20,8 @@
         <% else %>
           <li><%= link_to ' About', about_path %></li>
           <li><%= link_to ' 商品一覧', items_path %></li>
-          <li><%= link_to ' 新規登録', end_users_sign_up_path %></li>
-          <li><%= link_to ' ログイン', end_users_sign_in_path %></li>
+          <li><%= link_to ' 新規登録', new_customer_registration_path %></li>
+          <li><%= link_to ' ログイン', new_customer_session_path %></li>
         <% end %>
       </ul>
     </nav>
