--- a/app/views/admin/items/_form.html.erb
+++ b/app/views/admin/items/_form.html.erb
@@ -1,8 +1,9 @@
 <div class="col-xs-4">
   <div class="form-group">
-    <%= f.label :image, "商品画像" %>
-    <%= f.attachment_field :image %>
-    <!--プレビュー機能の実装をするか検討-->
+    <% if item.image.present? %>
+      <%= attachment_image_tag @item, :image, format: "jpeg", size: "250x200", id: "img-edit" %>
+    <% end %>
+    <%= f.attachment_field :image, type: 'file', id: "img-file" %>
   </div>
 </div>
 
