--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -4,7 +4,7 @@
 
     <div class="row">
       <%= form_with model:@item, url:admin_items_path, local:true do |f| %>
-        <%= render "form", f: f %>
+        <%= render "form", f: f, item: @item %>
       <% end %>
     </div>
 </div>
