--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -18,9 +18,7 @@
             <td><%= attachment_image_tag cart_item.item, :image, :size =>'150x150' %><%= cart_item.item.name %></td>
             <td class="item-price"><%= addTax(cart_item.item.price,1.1) %></td>
             <td>
-              <%= form_with model: cart_item, url: cart_item_path(cart_item), method: :patch, local: true do |f| %>
-                <%= f.text_field :amount %><%= f.submit "変更", class: "btn btn-primary" %>
-              <% end %>
+              <%= cart_item.amount %>
             </td>
             <td><%= addTax((cart_item.item.price * cart_item.amount),1.1) %></td>
             <td><%= link_to "削除する", cart_item_path(cart_item), method: :delete, data: {confirm: "この商品を削除しますか？"}, class: "btn btn-danger" %></td>
@@ -37,7 +35,10 @@
       <h4>お届け先</h4>
       <div class="ordered_address">〒<%= @order.postal_code %>  <%= @order.address %></div>
       <p class"ordered_name"><%= @order.name %></p>
-      <%= form_with model: @order, url: orders_path, local: true do |f| %>
+      <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
+        <% f.hidden_field :postal_code, :value => @order.postal_code %>
+        <% f.hidden_field :address, :value => @order.address %>
+        <% f.hidden_field :name, :value => @order.name %>
         <%= f.submit "購入を確定する", class: "btn btn-success" %>
       <% end %>
     </div>
