--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -14,9 +14,8 @@
       <% @orders.each do |order| %>
       <tr>
         <td>
-          <time><%= order.created_at.strftime("%Y-%m-%d %H:%M") %></time>
+          <%= order.created_at.strftime("%Y-%m-%d %H:%M") %><
         </td>
-        <td><%= order.address %></td>
         <td><%= order.item %></td>
         <td><%= order.total_payment %></td>
         <td><%= order.status %></td>
