--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -20,8 +20,7 @@
           <%= f.label :登録済住所から選択 %>
         </p>
         <p>
-          <!--@address, :idを配列のところに入れる-->
-          <%= f.select :order, ['1', '2'], { include_blank: '下記からお選び下さい' } %>
+          <%= f.collection_select :id, @addresses, :id, :ordered_address, include_blank: '下記からお選び下さい' %>
         </p>
         <p>
           <%= f.radio_button :order, "2" %>
