--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -44,14 +44,14 @@
   <% @order_details.each do |order_detail| %>
   <tbody>
     <tr>
-      <td><%= order_detail.order.name %></td>
+      <td><%= order_detail.item.name %></td>
       <td><%= order_detail.price.to_s(:delimited) %></td>
       <td><%= order_detail.amount %></td>
       <td><%= (order_detail.price * order_detail.amount).to_s(:delimited) %></td>
       <td>
          <%= form_with model:order_detail, url: admin_order_order_detail_path(@order, order_detail), local: true do |f| %>
            <%= f.select(:making_status, {制作不可: '制作不可', 制作待ち: '制作待ち', 制作中: '制作中', 制作完了: '制作完了'}) %>
-           <%= f.submit "更新" %>
+           <!--<%= f.submit "更新" %> ３−５にて実装-->
          <% end %>
       </td>
     </tr>
