--- a/app/views/public/addresses/edit.html.erb
+++ b/app/views/public/addresses/edit.html.erb
@@ -1,2 +1,11 @@
-<h1>Public::Addresses#edit</h1>
-<p>Find me in app/views/public/addresses/edit.html.erb</p>
+<h1>配送先編集</h1>
+
+<%= form_with model:@address, local:true do |f| %>
+  <%= f.label :"郵便番号(ハイフンなし)" %>
+  <%= f.text_field :postal_code %>
+  <%= f.label :"住所" %>
+  <%= f.text_field :address %>
+  <%= f.label :"宛名" %>
+  <%= f.text_field :name %>
+  <%= f.submit "編集する" %>
+<% end %>
