--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,2 +1,18 @@
-<h1>Public::Addresses#index</h1>
-<p>Find me in app/views/public/addresses/index.html.erb</p>
+<h1>配送先登録/一覧</h1>
+<%= form_with model:@address, local:true do |f| %>
+  <%= f.label :"郵便番号(ハイフンなし)" %>
+  <%= f.text_field :postal_code %>
+  <%= f.label :"住所" %>
+  <%= f.text_field :address %>
+  <%= f.label :"宛名" %>
+  <%= f.text_field :name %>
+  <%= f.submit "登録する" %>
+<% end %>
+
+<% @addresses.each do |address| %>
+  <%= address.postal_code %>
+  <%= address.address %>
+  <%= address.name %>
+  <%= link_to "編集する", edit_address_path(address) %>
+  <%= link_to "削除する", address_path(address), method: :delete %>
+<% end %>
