--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,6 +37,14 @@ body {
   padding: 15px 25px 0 0;
 }
 
-.admin_login{
-  margin:0 auto;
+
+// 鈴木追加分
+
+.admin-login-form{
+  
 }
+
+.admin-email-form{
+  padding:10px;
+}
+// 鈴木追加分
