--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -31,16 +31,16 @@
           </tr>
         </thead>
         <tbody>
-         <% @cart_items.each do |cart_item| %>
+         <% @order.order_details.each do |order_detail| %>
           <tr>
-            <td><%= cart_item.item.name %></td>
-            <td class="item-price"><%= addTax(cart_item.item.price,1.1) %></td>
+            <td><%= order_detail.item.name %></td>
+            <td class="item-price"><%= addTax(order_detail.item.price,@rate) %></td>
             <td>
-              <%= cart_item.amount %>
+              <%= order_detail.amount %>
             </td>
-            <td><%= addTax((cart_item.item.price * cart_item.amount),1.1) %></td>
+            <td><%= addTax((order_detail.item.price * order_detail.amount),@rate) %></td>
           </tr>
-          <% @sum += cart_item.item.price * cart_item.amount %>
+          <% @sum += order_detail.item.price * order_detail.amount %>
          <% end %>
         </tbody>
       </table>
@@ -50,9 +50,9 @@
       <h4>請求内容</h4>
       <table border="1">
         <tr>
-          <td>商品合計</td><td>¥<%= (@sum * 1.1 ).round %>(税込)</td>
+          <td>商品合計</td><td>¥<%= (@sum * @rate ).round %>(税込)</td>
           <td>配送料</td><td>¥<%= @postage %></td>
-          <td>御請求額</td><td>¥<%= (@sum * 1.1 ).round + @postage %></td>
+          <td>御請求額</td><td>¥<%= (@sum * @rate ).round + @postage %></td>
         </tr>
       </table>
     </div>
