--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -17,8 +17,12 @@
           <%= order.created_at.strftime("%Y-%m-%d %H:%M") %>
         </td>
         <td>〒<%= order.postal_code %> <%= order.address %> <%= order.name %></td>
-        <td><%#= order.item %></td>
-        <td><%= order.total_payment %></td>
+        <td>
+          <% order.order_details.each do |order_detail| %>
+            <%= order_detail.item.name %></br>
+          <% end %>
+        </td>
+        <td>¥<%= order.total_payment %></td>
         <td><%= order.status %></td>
         <td><%= link_to "表示する", order_path(order), class: "btn btn-primary" %></td>
       </tr>
