--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -3,7 +3,11 @@
     <div class="row">
       <div class="col-lg-8">
         <h2>ショッピングカート</h2>
-        <!--部分テンプレート予定（confirmのところも）-->
+        <div class="container">
+          <% if flash[:notice] %>
+            <p id="notice" style="color: #00ff7f;"><%= notice %></p>
+          <% end %>
+        </div>
         <% if @cart_items.present? %>
         <table border="1">
           <thead>
