--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -13,7 +13,7 @@
     <tr>
       <td>
         <%= link_to admin_order_path(order) do %>
-          <%= order.created_at %>
+          <%= order.created_at.strftime("%Y-%m-%d %H:%M") %>
         <% end %>
       </td>
       <td>
@@ -21,7 +21,7 @@
           <%= order.customer.last_name %>  <%= order.customer.first_name %>
         <% end %>
       </td>
-      <td><%= order.postage %></td>
+      <td><%= order.order_details.sum(:amount) %></td>
       <td><%= order.status %></td>
     </tr>
   </tbody>
