--- a/app/views/admin/end_users/show.html.erb
+++ b/app/views/admin/end_users/show.html.erb
@@ -3,7 +3,7 @@
 <table>
   <tr>
     <td>顧客ID</td>
-    <td><%= @end_user.id %> <%= @end_user.is_deleted == true ? '有効':'退会済' %>会員</td>
+    <td><%= @end_user.id %> <%= @end_user.is_deleted == true ? '退会済':'有効' %>会員</td>
   </tr>
   <tr>
     <td>氏名</td>
