--- a/app/views/admin/end_users/edit.html.erb
+++ b/app/views/admin/end_users/edit.html.erb
@@ -42,10 +42,10 @@
     <tr>
       <td><%= f.label :"会員ステータス" %></td>
       <td>
-        <%= f.radio_button :is_deleted, :true %>
-        <%= f.label :is_deleted, "有効", {value: :true, style: "display: inline-block;"} %>
         <%= f.radio_button :is_deleted, :false %>
-        <%= f.label :is_deleted, "退会済み", {value: :false, style: "display: inline-block;"} %>
+        <%= f.label :is_deleted, "有効", {value: :false, style: "display: inline-block;"} %>
+        <%= f.radio_button :is_deleted, :true %>
+        <%= f.label :is_deleted, "退会済み", {value: :true, style: "display: inline-block;"} %>
       </td>
     </tr>
   </table>
