--- a/app/views/admin/end_users/index.html.erb
+++ b/app/views/admin/end_users/index.html.erb
@@ -18,7 +18,7 @@
         <% end %>
       </td>
       <td><%= end_user.email %></td></td>
-      <td><%= end_user.is_deleted == true ? '有効':'退会済' %></td>
+      <td><%= end_user.is_deleted == true ? '退会済':'有効' %></td>
     </tr>
   </tbody>
   <% end %>
