--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,3 +1,4 @@
 <h3>管理者画面</h2>
-<h2>本日の注文件数 <%= @order.count%>件</h2>
-<%= link_to "ワイヤーフレームにはないけど、ログアウトできるか確認するボタン", destroy_admin_session_path, method: :delete %>
+<h2>本日の注文件数 <%= @order %>件</h2>
+
+
