--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -16,25 +16,8 @@
 
   <div class="row">
     <div class="col-xs-8">
-      <div class="genre-index">
-        <table class="table">
-          <thead class="thead-light">
-            <tr>
-              <th>ジャンル</th>
-              <th>状態</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @genres.each do |genre| %>
-              <tr>
-                <td><%= genre.name %></td>
-                <td><%= genre.is_active == true ? "有効":"無効" %></td>
-                <td><%= link_to "編集する", edit_admin_genre_path(genre), class: "btn btn-primary" %></td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
+      <div class="genre">
+        <%= render "table", genres: @genres %>
       </div>
     </div>
     <div class="col-xs-4"></div>
