--- a/app/views/admin/items/_table.html.erb
+++ b/app/views/admin/items/_table.html.erb
@@ -13,7 +13,7 @@
       <tr>
         <td><%= item.id %></td>
         <td>
-          <%= link_to admin_item_path(item) do %>
+          <%= link_to admin_item_path(item), class: "admin-item-link" do %>
             <%= item.name %>
           <% end %>
         </td>
