--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -1,29 +1,2 @@
 <h1>注文履歴一覧</h1>
-<table>
-  <thead>
-    <tr>
-      <td>購入日時</td>
-      <td>購入者</td>
-      <td>注文個数</td>
-      <td>注文ステータス</td>
-    </tr>
-  </thead>
-  <% @orders.each do |order| %>
-  <tbody>
-    <tr>
-      <td>
-        <%= link_to admin_order_path(order) do %>
-          <%= order.created_at.strftime("%Y-%m-%d %H:%M") %>
-        <% end %>
-      </td>
-      <td>
-        <%= link_to admin_order_path(order) do %>
-          <%= order.customer.last_name %>  <%= order.customer.first_name %>
-        <% end %>
-      </td>
-      <td><%= order.order_details.sum(:amount) %></td>
-      <td><%= order.status %></td>
-    </tr>
-  </tbody>
-  <% end %>
-</table>
+<%= render "table", orders: @orders %>
