--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -5,7 +5,7 @@
         <%= render "genre", genres: @genres %>
       </div>
       <div class="col-lg-9">
-        <h2 class="item-head"><b>商品一覧</b></h2>
+        <h2 class="item-head"><b>商品一覧</b> <i class="fas fa-birthday-cake"></i></h2>
         <%= render "item", items: @items %>
         <%= paginate @items %>
       </div>
