--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8">
-      <h2>注文情報確認</h2>
+      <h2 class="title"><b>注文情報確認</b><i class="fas fa-info-circle"></i></h2>
       <table border="1">
         <thead>
           <tr>
@@ -15,8 +15,11 @@
         <tbody>
           <% @cart_items.each do |cart_item| %>
           <tr>
-            <td><%= attachment_image_tag cart_item.item, :image, :size =>'150x150' %><%= cart_item.item.name %></td>
-            <td class="item-price"><%= addTax(cart_item.item.price,@rate) %></td>
+            <td>
+              <%= attachment_image_tag cart_item.item, :image, :size =>'100x100' %></br>
+              <%= cart_item.item.name %>
+            </td>
+            <td class="item-taxed_price"><%= addTax(cart_item.item.price,@rate) %></td>
             <td>
               <%= cart_item.amount %>
             </td>
@@ -28,36 +31,34 @@
          <% end %>
         </tbody>
       </table>
-      <h4>支払い方法</h4>
-      <div class="payment-method"><%= @order.payment_method %></div>
-
-
-      <h4>お届け先</h4>
-      <div class="ordered_address">〒<%= @order.postal_code %>  <%= @order.address %></div>
-      <p class"ordered_name"><%= @order.name %></p>
-      <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
-        <%= f.hidden_field :postal_code, :value => @order.postal_code %>
-        <%= f.hidden_field :address, :value => @order.address %>
-        <%= f.hidden_field :name, :value => @order.name %>
-        <%= f.hidden_field :postage, :value => @order.postage %>
-        <%= f.hidden_field :total_payment, :value => (@sum * @rate).round + @order.postage %>
-        <%= f.hidden_field :payment_method, :value => @order.payment_method %>
-        <%= f.submit "購入を確定する", class: "btn btn-success" %>
-      <% end %>
-    </div>
-
-    <div class="col-lg-4">
       <table border="1">
         <tr>
-          <td>送料</td><td>¥<%= @order.postage %></td>
+          <th>送料</th><td>¥<%= @order.postage %></td>
         </tr>
         <tr>
-          <td>商品合計</td><td>¥<%= (@sum * @rate ).round %>(税込)</td>
+          <th>商品合計</th><td>¥<%= (@sum * @rate ).round %>(税込)</td>
         </tr>
         <tr>
-          <td>請求金額</td><td>¥<%= (@sum * @rate ).round + @order.postage %></td>
+          <th>請求金額</th><td><b>¥<%= (@sum * @rate ).round + @order.postage %></b></td>
         </tr>
       </table>
+
+      <div class="confirm-info">
+        <h4><b>支払い方法</b></h4>
+        <div class="payment-method"><%= @order.payment_method %></div>
+        <h4><b>お届け先</b></h4>
+        <div class="ordered_address">〒<%= @order.postal_code %>  <%= @order.address %></div>
+        <p class"ordered_name"><%= @order.name %></p>
+        <%= form_with model: @order, url: orders_path, method: :post, local: true do |f| %>
+          <%= f.hidden_field :postal_code, :value => @order.postal_code %>
+          <%= f.hidden_field :address, :value => @order.address %>
+          <%= f.hidden_field :name, :value => @order.name %>
+          <%= f.hidden_field :postage, :value => @order.postage %>
+          <%= f.hidden_field :total_payment, :value => (@sum * @rate).round + @order.postage %>
+          <%= f.hidden_field :payment_method, :value => @order.payment_method %>
+          <%= f.submit "購入を確定する", class: "btn btn-success" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
