--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,4 +1,4 @@
-<h2>注文履歴一覧</h2>
+<h2 class="title"><b>注文履歴一覧</b><i class="fas fa-info-circle"></i></h2>
   <table border="1">
     <thead>
       <tr>
