--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,14 +1,14 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-9">
-      <h2>注文履歴詳細</h2>
-      <h4>注文情報</h4>
+      <h2 class="title"><b>注文履歴詳細</b><i class="fas fa-info-circle"></i></h2>
+      <h4><b>注文情報</b></h4>
       <table border="1">
         <tr>
-          <td>注文日</td>
-          <td>配送先</td>
-          <td>支払方法</td>
-          <td>ステータス</td>
+          <th>注文日</th>
+          <th>配送先</th>
+          <th>支払方法</th>
+          <th>ステータス</th>
         </tr>
         <tr>
           <td>
@@ -19,7 +19,7 @@
           <td><%= @order.status %></td>
         </tr>
       </table>
-      <h4>注文内容</h4>
+      <h4><b>注文内容</b></h4>
       <table border="1">
         <thead>
           <tr>
@@ -27,14 +27,13 @@
             <th>単価</th>
             <th>数量</th>
             <th>小計</th>
-            <th></th>
           </tr>
         </thead>
         <tbody>
          <% @order.order_details.each do |order_detail| %>
           <tr>
             <td><%= order_detail.item.name %></td>
-            <td class="item-price"><%= addTax(order_detail.item.price,@rate) %></td>
+            <td class="item-taxed_price"><%= addTax(order_detail.item.price,@rate) %></td>
             <td>
               <%= order_detail.amount %>
             </td>
@@ -44,17 +43,15 @@
          <% end %>
         </tbody>
       </table>
-      <%= link_to "注文履歴一覧に戻る", orders_path %>
-    </div>
-    <div class="col-lg-3">
-      <h4>請求内容</h4>
+      <h4><b>請求内容</b></h4>
       <table border="1">
         <tr>
-          <td>商品合計</td><td>¥<%= (@sum * @rate ).round %>(税込)</td>
-          <td>配送料</td><td>¥<%= @postage %></td>
-          <td>御請求額</td><td>¥<%= (@sum * @rate ).round + @postage %></td>
+          <th>商品合計</th><td>¥<%= (@sum * @rate ).round %>(税込)</td>
+          <th>配送料</th><td>¥<%= @postage %></td>
+          <th>御請求額</th><td><b>¥<%= (@sum * @rate ).round + @postage %></b></td>
         </tr>
       </table>
+      <%= link_to "注文履歴一覧に戻る", orders_path %>
     </div>
   </div>
 </div>
