[Fix]header layout

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -165,3 +165,37 @@ table td {
   text-align: center;
   margin-top: 200px;
 }
+
+// ヘッダー
+.header-name {
+  font-size: 30px;
+  font-family: impact;
+}
+
+.header-link {
+  width: 120px;
+}
+
+.header-icon-5 {
+  font-size: 2em;
+  margin-left: 20px;
+}
+
+.header-icon-4 {
+  font-size: 2em;
+  margin-left: 15px;
+}
+
+.header-icon-3 {
+  font-size: 2em;
+  margin-left: 3px;
+}
+
+.header-icon-6 {
+  font-size: 2em;
+  margin-left: 25px;
+}
+
+.search-form {
+  margin-right: 50px;
+}
