--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -6,7 +6,7 @@
       </div>
       <div class="col-lg-9">
         <p class="welcome">
-          ようこそ、NaganoCakeへ！<br>
+          ようこそ、<span class="header-name">Nagano Cake</span> へ！<br>
           このサイトは、ケーキ販売のECサイトになります。<br>
           会員でない方も商品の閲覧はできますが、<br>
           購入には会員登録が必要になります。
