--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,7 +1,7 @@
 <header class="navbar navbar-fixed-top navbar-inverse">
   <div class="container">
     <nav class='nav navbar-nav navbar-left' >
-      <li><%= link_to ' Nagano Cake', root_path, class: 'glyphicon glyphicon-home home' %></li>
+      <li><%= link_to image_tag('nagano_cake.png',width:"80px"), root_path %></li>
     </nav>
     <nav>
       <div class="row">
