--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,7 +1,7 @@
 <h1>配送先登録/一覧</h1>
 
 
-<table>
+<table class="address-input-form">
 <%= form_with model:@address, local:true do |f| %>
   <tr>
     <td><%= f.label :"郵便番号(ハイフンなし)" %></td>
@@ -16,25 +16,26 @@
     <td><%= f.text_field :name %></td>
   </tr>
   <tr>
-    <td><%= f.submit "登録する" %></td>
+    <td><%= f.submit "登録する", class: "btn btn-success" %></td>
   </tr>
 <% end %>
 </table>
 
-<table>
+<table class="address-index">
   <tr>
-    <td>郵便番号</td>
-    <td>住所</td>
-    <td>宛名</td>
-    <td></td>
+    <th>郵便番号</th>
+    <th>住所</th>
+    <th>宛名</th>
+    <th></th>
+    <th></th>
   </tr>
-  <tr>
   <% @addresses.each do |address| %>
+  <tr>
     <td><%= address.postal_code %></td>
     <td><%= address.address %></td>
     <td><%= address.name %></td>
-    <td><%= link_to "編集する", edit_address_path(address) %></td>
-    <td><%= link_to "削除する", address_path(address), method: :delete %></td>
-  <% end %>
+    <td><%= link_to "編集する", edit_address_path(address), class: "btn btn-primary" %></td>
+    <td><%= link_to "削除する", address_path(address), method: :delete, class: "btn btn-danger" %></td>
   </tr>
+  <% end %>
 </table>
