--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -9,7 +9,7 @@
           <% end %>
         </div>
         <% if @cart_items.present? %>
-        <table border="1">
+        <table class="table-data" border="1">
           <thead>
             <tr>
               <th>商品名</th>
