--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -7,7 +7,7 @@
       <div class="col-lg-9">
         <h2 class="item-head"><b>商品一覧</b> <i class="fas fa-birthday-cake"></i></h2>
         <%= render "item", items: @items %>
-        <%= paginate @items %>
+        <%#= paginate @items %>
       </div>
     </div>
   </div>
