--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -25,11 +25,11 @@
       </div>
       <div class="form-group">
         <%= f.label :postal_code, "郵便番号（ハイフンなし）" %>
-          <%= f.text_field :postal_code %>
+          <%= f.text_field :postal_code, id: "customer_postal_code" %>
       </div>
       <div class="form-group">
         <%= f.label :address, "住所" %>
-          <%= f.text_field :address %>
+          <%= f.text_field :address, id: 'customer_address' %>
       </div>
       <div class="form-group">
         <%= f.label :telphone_number, "電話番号（ハイフンなし）" %>
