--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -13,7 +13,7 @@
         </p>
         <h2 class="item-head"><b>オススメ商品</b></h2>
           <div class="item-lists">
-            <% @random.each do |item| %>
+            <% @items.each do |item| %>
             　<div class="col-2 ">
               <div class="card-image">
                 <figure class="image">
