--- a/app/assets/stylesheets/public/addresses.scss
+++ b/app/assets/stylesheets/public/addresses.scss
@@ -3,10 +3,28 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
 
-.address-input-form{
+.address-input{
  margin:20px 0px;
+ display:flex;
 }
 
 .address-index{
  margin:20px 0px;
+}
+
+.address-input-button{
+ display:flex;
+ align-items:flex-end;
+}
+
+.address-input-form > div{
+ margin:10px 20px;
+}
+
+.address-input-button > div{
+ margin:10px 20px;
+}
+
+.size-input-address{
+ width:26em;
 }
