--- a/app/assets/stylesheets/public/end_users.scss
+++ b/app/assets/stylesheets/public/end_users.scss
@@ -1,3 +1,77 @@
 // Place all the styles related to the public::end_users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.mypage{
+  padding:30px;
+}
+
+.mypage-form{
+  display:flex;
+  margin:10px 0px;
+}
+
+.mypage-form-box{
+  text-align:left;
+}
+
+.mypage-bottom{
+  display:flex;
+}
+
+.mypage-bottom-box p:nth-child(1){
+  margin-bottom:25px;
+}
+
+// public_end_users_edit
+
+.mypage-edit{
+  padding:30px;
+}
+
+.profile-edit{
+display:flex;
+}
+
+.form-group{
+  display:flex;
+  flex-direction:column;
+}
+
+.edit-buttons{
+  display:flex;
+}
+
+.edit-buttons > p{
+  margin:0px 50px;
+}
+
+// public_end_users_withdraw
+
+.withdraw{
+  margin:0px auto;
+}
+
+.withdraw-confirm{
+  display:flex;
+  justify-content:center;
+}
+
+.withdraw-confirm-text{
+  display:flex;
+  justify-content:center;
+  text-align:center;
+}
+
+.withdraw-buttons{
+  display:flex;
+  justify-content:center;
+}
+
+.no-withdraw{
+  margin-right:20px;
+}
+
+.yes-withdraw{
+  margin-left:20px;
+}
