--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,8 +60,57 @@ body {
   padding: 15px 25px 0 0;
 }
 
+.container{
+  width:100%;
+}
 
-// 鈴木追加分
+header{
+  height:140px;
+  
+}
+
+
+.back-design{
+   background-color   : #ffffff;
+  background-image   : radial-gradient(rgba(153, 255, 255, 0.35) 30%, transparent 33%),
+                       radial-gradient(rgba(153, 255, 255, 0.35) 30%, transparent 33%);
+  background-position: 0 0, 21px 21px;
+  background-size    : 42px 42px;
+}
+
+header{
+   background-color : #fff;
+  background-image :
+      repeating-linear-gradient(45deg,
+                                rgba(255, 255, 153, 0.62),
+                                rgba(255, 255, 153, 0.62) 50px,
+                                rgba(0, 0, 0, 0) 0,
+                                rgba(0, 0, 0, 0) 100px),
+      repeating-linear-gradient(315deg,
+                                rgba(255, 255, 77, 0.64),
+                                rgba(255, 255, 77, 0.64) 50px,
+                                rgba(0, 0, 0, 0) 0,
+                                rgba(0, 0, 0, 0) 100px);
+}
+
+footer{
+   background-color : #fff;
+  background-image :
+      repeating-linear-gradient(45deg,
+                                rgba(255, 255, 153, 0.62),
+                                rgba(255, 255, 153, 0.62) 50px,
+                                rgba(0, 0, 0, 0) 0,
+                                rgba(0, 0, 0, 0) 100px),
+      repeating-linear-gradient(315deg,
+                                rgba(255, 255, 77, 0.64),
+                                rgba(255, 255, 77, 0.64) 50px,
+                                rgba(0, 0, 0, 0) 0,
+                                rgba(0, 0, 0, 0) 100px);
+}
+
+
+
+// 管理画面
 
 .admin-login-form{
   display:flex;
@@ -83,7 +132,6 @@ body {
   margin:30px;
 }
 
-// 鈴木追加分
 
 // ジャンル検索機能
 .genre-search {
@@ -211,7 +259,6 @@ table td {
 
 // ヘッダー
 header {
-  background-color: #FFFFCC;
   position: absolute;
   top: 0;
   background-position: center top;
@@ -257,7 +304,6 @@ footer {
   height: 120px;
   text-align: center;
   padding: 50px 0;
-  background-color: #FFFFCC;
   background-position: center bottom;
   background-size: contain;
   position: absolute;
