--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="navbar navbar-fixed-bottom">
+<footer class="navbar">
     <div class="container">
       <div class="footer-text">TEL: <b>0120-828-016</b></div>
       <div class="footer-text">Address：<b>長野県北佐久郡軽井沢町大字軽井沢878</b></div>
