--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,5 +1,5 @@
-<header class="navbar navbar-fixed-top">
-  <div class="container">
+<header class="navbar">
+  <div>
     <nav class='nav navbar-nav navbar-left' >
       <li><%= link_to image_tag('ながのCAKE.png',width:"110px"), root_path %></li>
     </nav>
