--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,11 +1,19 @@
 <div class="container">
   <div class="row">
-    <h1>About</h1>
-    <p>ながのCakeは全国発送可能なケーキ屋さんです。</p>
-    <p>お子様からお年寄りの方までお召し上がりいただけるよう、</p>
-    <p>様々なバリエーションをご用意しております。</p>
-    <p>また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</p>
-    <p>ぜひご注文ください。</p>
+    <div class="col-lg-6">
+      <h1>About</h1>
+    <p>
+      ながのCakeは全国発送可能なケーキ屋さんです。</br>
+      お子様からお年寄りの方までお召し上がりいただけるよう、</br>
+      様々なバリエーションをご用意しております。</br>
+      また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。</br>
+      ぜひご注文ください。
+    </p>
+    </div>
+    <div class="col-lg-6">
+      <div><%= image_tag "about_image.jpg", size: "250x300", alt: "アイコン" %></div>
+      <div><%= image_tag "about_image2.jpg", size: "250x300", alt: "アイコン" %></div>
+    </div>
   </div>
 </div>
 
